syntax = "proto3";

option java_multiple_files = true;
package ru.otus.grpc;

message NumberRequest {
  int64 firstValue = 1;
  int64 lastValue = 30;
}

message NumberResponse {
  int64 number = 1;
}

service NumbersService {
  rpc generateNumbers(NumberRequest) returns (stream NumberResponse);
}